<resources>
    <string name="app_name" translatable="false">TrailBlaze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoiZGFkcmFnYWhuIiwiYSI6ImNrcHIxbWQ1NjA0Mnoybm1udjk0dnBvNnUifQ.2afhAdim2KHXvHxM7lLlUQ</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>

    <string name="explorar">Explorar</string>
    <string name="favoritos">Favoritos</string>
    <string name="contribuir">Contribuir</string>
    <string name="perfil">Perfil</string>
    <string name="lastName">Apelido</string>
    <string name="guardar">Guardar</string>
    <string name="icon">icon</string>
    <string name="background">background</string>
    <string name="login">Login</string>
    <string name="register">Registar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profileimage">ProfileImage</string>
    <string name="logout">Logout</string>
    <string name="meus_trilhos">Meus Trilhos</string>
    <string name="grupos">Grupos</string>
    <string name="fotos">Fotos</string>
    <string name="gravar">Gravar</string>
    <string name="center">center</string>
    <string name="dir">DIR</string>
    <string name="iniciar">INICIAR</string>
    <string name="descricao">Descrição</string>
    <string name="record">record</string>
    <string name="excluir">Excluir</string>
    <string name="partilhar">Partilhar</string>
    <string name="amigos">Amigos</string>
    <string name="individual">Individual</string>
    <string name="acompanhado">Acompanhado</string>
    <string name="seleciona_o_tipo_de_percurso">Seleciona o tipo de Percurso</string>
    <string name="convidar">Convidar</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="deseja_continuar_com_este_grupo">Deseja continuar com este grupo</string>
    <string name="notificacoes">Notificações</string>
    <string name="recusar">Recusar</string>
    <string name="aceitar">Aceitar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="alterar_foto_de_perfil">Alterar foto de perfil</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="definicoes">Definições</string>
    <string name="nome_do_grupo">Nome do Grupo</string>
    <string name="criar_grupo">Criar Grupo</string>
    <string name="convidar_amigos">Convidar amigos</string>
    <string name="adicionar_grupo">Adicionar Grupo</string>
    <string name="adicionar_amigo">Adicionar Amigo</string>
    <string name="criar">Criar</string>
    <string name="filtros">Filtros</string>
    <string name="reset">Reset</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="facil">Fácil</string>
    <string name="moderado">Moderado</string>
    <string name="dificil">Difícil</string>
    <string name="modalidade">Modalidade</string>
    <string name="caminhada">Caminhada</string>
    <string name="corrida">Corrida</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="aplicar">Aplicar</string>
    <string name="chegou_ao_final_do_seu_percurso">Chegou ao final do seu Percurso</string>
    <string name="terminar">Terminar</string>
    <string name="finalizar">Finalizar</string>
    <string name="share">Share</string>
    <string name="membros">Membros:</string>
    <string name="deseja_sair_deste_percurso">Deseja sair deste Percurso?</string>
    <string name="sair">Sair</string>
    <string name="voltar">Voltar</string>
    <string name="reviews">Reviews: </string>
    <string name="distancia_">Distância:</string>
    <string name="dificuldade_">Dificuldade:</string>
    <string name="modalidade_">Modalidade:</string>
    <string name="partilhar_imagem">Partilhar Imagem</string>
    <string name="passos">Passos</string>
    <string name="distancia">Distância</string>
    <string name="procurar">Procurar</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="a_gravar">A GRAVAR</string>
    <string name="pausar">PAUSA</string>
    <string name="o_que_achou_do_percurso">O que achou do Percurso?</string>
    <string name="trilhos">Trilhos</string>
    <string name="unidades">Unidades</string>
    <string name="linguagem">Linguagem</string>
    <string name="metrico">Métrico</string>
    <string name="imperial">Imperial</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="camera">camera</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="nome_">Nome:</string>
    <string name="partida_fim">Partida/Fim:</string>
    <string name="descricao_">Descrição:</string>
    <string name="foto_">Foto:</string>
    <string name="tempo_">Tempo:</string>
    <string name="convidar_amigo">Convidar Amigo</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="sair_do_grupo">Sair do Grupo</string>
    <string name="nenhum">Nenhum</string>
    <string name="nao_gostei">Não gostei</string>
    <string name="nao_foi_mau">Não foi mau</string>
    <string name="podia_ser_melhor">Podia ser melhor</string>
    <string name="gostei">Gostei</string>
    <string name="adorei">Adorei</string>
    <string name="convitePercurso">enviou-te um convite para percorrer</string>
    <string name="conviteGrupo">enviou-te um convite para juntares ao Grupo</string>

    <string-array name="modalidades">
        <item>@string/caminhada</item>
        <item>@string/corrida</item>
        <item>@string/ciclismo</item>
    </string-array>

    <string-array name="dificuldade">
        <item>@string/facil</item>
        <item>@string/moderado</item>
        <item>@string/dificil</item>
    </string-array>

    <string-array name="unidades">
        <item>@string/metrico</item>
        <item>@string/imperial</item>
    </string-array>

    <string-array name="linguagem">
        <item>@string/portugues</item>
        <item>@string/ingles</item>
    </string-array>

</resources>