<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FiltrosFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="start|top"
        android:background="@color/white">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_cross"
            app:backgroundTint="@color/trailGreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35dp"
            android:text="@string/filtros"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/reset"
            android:textColor="@color/trailGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dificuldade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/dificuldade"
            android:textColor="@color/trailGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/facilChp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/facil"
                android:textAlignment="center"
                android:textColor="@color/chip_text"
                android:textSize="15sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/chip_selector"
                app:chipStrokeColor="@color/chip_stroke_color"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/moderadoChp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/moderado"
                android:textAlignment="center"
                android:textColor="@color/chip_text"
                android:textSize="15sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/chip_selector"
                app:chipStrokeColor="@color/chip_stroke_color"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dificilChp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/dificil"
                android:textAlignment="center"
                android:textColor="@color/chip_text"
                android:textSize="15sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/chip_selector"
                app:chipStrokeColor="@color/chip_stroke_color"
                app:chipStrokeWidth="2dp" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:layout_width="380dp"
            android:layout_height="2dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/trailGreen" />

        <TextView
            android:id="@+id/modalidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/modalidade"
            android:textColor="@color/trailGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/caminhadaChp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/caminhada"
                android:textAlignment="center"
                android:textColor="@color/chip_text"
                android:textSize="15sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/chip_selector"
                app:chipStrokeColor="@color/chip_stroke_color"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/corridaChp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/corrida"
                android:textAlignment="center"
                android:textColor="@color/chip_text"
                android:textSize="15sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/chip_selector"
                app:chipStrokeColor="@color/chip_stroke_color"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ciclismoChp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/ciclismo"
                android:textAlignment="center"
                android:textColor="@color/chip_text"
                android:textSize="15sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/chip_selector"
                app:chipStrokeColor="@color/chip_stroke_color"
                app:chipStrokeWidth="2dp" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:layout_width="380dp"
            android:layout_height="2dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/trailGreen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aplicarBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttons"
            android:backgroundTint="@color/trailGreen"
            android:text="@string/aplicar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/trailGreen" />

    </GridLayout>

</androidx.appcompat.widget.LinearLayoutCompat>