<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContribuirFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mapbox_cameraZoom="15" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recenterBtn"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="200dp"
            android:clickable="true"
            android:contentDescription="@string/center"
            android:focusable="true"
            android:src="@drawable/ic_sharp_my_location"
            app:fabCustomSize="43dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cameraBtn"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="150dp"
            android:clickable="true"
            android:contentDescription="@string/camera"
            android:focusable="true"
            android:src="@drawable/ic_camera_filled"
            android:visibility="gone"
            app:fabCustomSize="43dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recordBtn"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/trailGreen"
            android:contentDescription="@string/record"
            android:src="@drawable/record_button"
            app:backgroundTint="@color/trailGreen"
            app:borderWidth="3dp"
            app:maxImageSize="58dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/stopBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/y_white"
            android:contentDescription="@string/stop"
            android:foregroundGravity="center"
            android:src="@drawable/ic_record_stop"
            android:visibility="gone"
            app:backgroundTint="@color/trailGreen"
            app:borderWidth="3dp"
            app:fabCustomSize="48dp"
            app:maxImageSize="35dp"
            app:tint="@color/trailGreen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pauseBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/y_white"
            android:contentDescription="@string/pause"
            android:foregroundGravity="center"
            android:src="@drawable/ic_pause_circle"
            android:visibility="gone"
            app:backgroundTint="@color/trailGreen"
            app:borderWidth="3dp"
            app:fabCustomSize="50.5dp"
            app:maxImageSize="34dp"
            app:tint="@color/trailGreen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/y_white"
            android:contentDescription="@string/play"
            android:foregroundGravity="center"
            android:src="@drawable/ic_play_circle"
            android:visibility="gone"
            app:backgroundTint="@color/trailGreen"
            app:borderWidth="3dp"
            app:fabCustomSize="50.5dp"
            app:maxImageSize="34dp"
            app:tint="@color/trailGreen" />

        <androidx.cardview.widget.CardView
            android:id="@+id/chronometerHolder"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="70dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/faded_green"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/actionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/a_gravar"
                    android:textColor="@color/trailGreen"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/trailGreen"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </GridLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>