<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perfil_background"
    android:orientation="vertical"
    tools:context=".PerfilFragment"
    tools:menu="@menu/perfil_menu">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/perfilText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:text="@string/perfil"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top">

        <androidx.cardview.widget.CardView
            android:layout_width="360dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="@color/ash_gray_alpha_plus"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/firstName"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="75dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:textColor="@color/trailDarkGreen"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/user"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:textColor="@color/trailDarkGreen" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profileimage"
            android:elevation="2dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/circularImage"
            app:strokeColor="@color/dirt_white"
            app:strokeWidth="5dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/trilhosBtn"
                android:layout_width="155dp"
                android:layout_height="125dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/round_buttons_perfil"
                android:text="@string/trilhos"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gruposBtn"
                android:layout_width="155dp"
                android:layout_height="125dp"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:background="@drawable/round_buttons_perfil"
                android:text="@string/grupos"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/amigosBtn"
                android:layout_width="155dp"
                android:layout_height="125dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_buttons_perfil"
                android:text="@string/amigos"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fotosBtn"
                android:layout_width="155dp"
                android:layout_height="125dp"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/round_buttons_perfil"
                android:text="@string/fotos"
                android:textColor="@color/white" />

        </GridLayout>

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>